.provarCaches/00D5f000005vwGkEAI/objects/rstk__helpsetup__c.object
<CustomObject>
    <description>helpsetup</description>
    <fields>
        <fullName>rstk__helpurl1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Page Help URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__helpurl2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZ_Future Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__helpurl3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZ_Future Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pagekey__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Page Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Help</label>
    <listViews>
        <fullName>rstk__Help_Setup</fullName>
        <columns>NAME</columns>
        <columns>rstk__helpurl1__c</columns>
        <columns>rstk__helpurl2__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Help Setup</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>